补充文档docs 01项目搭建

--- a/docs/01-项目搭建.md
+++ b/docs/01-项目搭建.md
@@ -23,9 +23,14 @@ location / {
 }
 ```
 
-### 进行访问： `https://zad.zengye.com/admin/login`
+### 进行访问： `http://zad.zengye.com/admin/login`
 
 ### 还需要copy 一份配置文件信息
   + 文件：`env.ini.example` 复制一份到 `.env`
   
 ### 进行正常操作即可 
+
+### 关于cos 可以自行配置 
+  + 通过 配置文件.env 的cos 进行开启 需要自行配置好腾讯云的cos （子账号）
+  + 有任何疑问 或建议 欢迎来评论咨询 或 私聊我
+  + 下一期视频我会专门使用出cos的使用和配置 结合当前项目
