补充文档docs 01项目搭建 默认域名 和 添加演示站点地址

--- a/docs/01-项目搭建.md
+++ b/docs/01-项目搭建.md
@@ -1,5 +1,11 @@
 ## 01项目搭建
 
+### 演示站点：
+ + 演示地址：[管理后台系统](https://madmin.zengye.top/admin/login) （里面的数据 随意操作）
++ 演示站点域名：`https://madmin.zengye.top/admin/login`
++ 因为域名走了cdn和并且添加了防盗链 直接从码云跳转过去可能会访问不了，建议复制链接直接新开游览器窗口打开
++ 账号：`xiaozeng` 密码：`123465`
+
 ### 进行拉取代码
 `git clone https://madmin.zengye.top/admin/login`
 
@@ -12,7 +18,7 @@
   + 将 [sql备份的文件进行导入](../sql_back/zeng.sql)
   
 ### 进行配置域名 和 伪静态 工具可以自行选择 推荐 nginx
-  + 此处以 `zad.zengye.com` 为例 
+  + 此处以 `zad.zengye.top` 为例 
   + 注意：运行目录需要设置  `/public`
   + 配置伪静态 
 ```nginx
@@ -23,7 +29,7 @@ location / {
 }
 ```
 
-### 进行访问： `http://zad.zengye.com/admin/login`
+### 进行访问： `http://zad.zengye.top/admin/login`
 
 ### 还需要copy 一份配置文件信息
   + 文件：`env.ini.example` 复制一份到 `.env`
